--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,15 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:vue/essential"
-    ],
+    "extends": ["eslint:recommended", "plugin:vue/essential"],
     // "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module"
     },
-    "plugins": [
-        "vue"
-    ],
-    "rules": {
-    }
+    "plugins": ["vue"],
+    "rules": {}
 }
