--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"eslint-plugin-babel": "^5.3.1",
 		"highcharts": "^7.0.1",
 		"highcharts-vue": "^1.0.4",
+		"mersenne-twister": "^1.1.0",
 		"vue": "^2.5.11",
 		"vue-material": "^1.0.0-beta-15",
 		"vue-material-design-icons": "^4.11.0"
