--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-	"name": "vue-app-demo",
-	"description": "A Vue.js project",
-	"version": "1.0.2",
-	"author": "",
-	"license": "",
-	"private": true,
-	"scripts": {
-		"dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-		"build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
-	},
-	"dependencies": {
-		"chokidar": "^3.5.1",
-		"eslint-plugin-babel": "^5.3.1",
-		"highcharts": "^7.0.1",
-		"highcharts-vue": "^1.0.4",
-		"mersenne-twister": "^1.1.0",
-		"vue": "^2.5.11",
-		"vue-material": "^1.0.0-beta-15",
-		"vue-material-design-icons": "^4.11.0"
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	],
-	"devDependencies": {
-		"@babel/cli": "^7.12.17",
-		"@babel/core": "^7.12.17",
-		"@babel/preset-env": "^7.12.17",
-		"babel-loader": "^8.0.5",
-		"cross-env": "^5.0.5",
-		"css-loader": "^0.28.7",
-		"eslint": "^7.20.0",
-		"eslint-plugin-vue": "^7.6.0",
-		"file-loader": "^1.1.4",
-		"install": "^0.12.2",
-		"npm": "^6.9.0",
-		"prettier": "1.19.1",
-		"standard": "^10.0.3",
-		"vue-loader": "^14.2.2",
-		"vue-template-compiler": "^2.4.4",
-		"webpack": "^4.2.0",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.2.0"
-	}
+    "name": "tradr",
+    "description": "A day-trader training app",
+    "version": "1.0.2",
+    "author": "",
+    "license": "",
+    "private": true,
+    "scripts": {
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    },
+    "dependencies": {
+        "chokidar": "^3.5.1",
+        "eslint-plugin-babel": "^5.3.1",
+        "highcharts": "^7.0.1",
+        "highcharts-vue": "^1.0.4",
+        "mersenne-twister": "^1.1.0",
+        "vue": "^2.5.11",
+        "vue-material": "^1.0.0-beta-15",
+        "vue-material-design-icons": "^4.11.0"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ],
+    "devDependencies": {
+        "@babel/cli": "^7.12.17",
+        "@babel/core": "^7.12.17",
+        "@babel/preset-env": "^7.12.17",
+        "babel-loader": "^8.0.5",
+        "cross-env": "^5.0.5",
+        "css-loader": "^0.28.7",
+        "eslint": "^7.20.0",
+        "eslint-plugin-vue": "^7.6.0",
+        "file-loader": "^1.1.4",
+        "install": "^0.12.2",
+        "npm": "^6.9.0",
+        "prettier": "1.19.1",
+        "standard": "^10.0.3",
+        "vue-loader": "^14.2.2",
+        "vue-template-compiler": "^2.4.4",
+        "webpack": "^4.2.0",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.2.0"
+    }
 }
