--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "private": true,
     "scripts": {
         "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-        "deploy": "sh deploy.sh"
+        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
     },
     "dependencies": {
         "chokidar": "^3.5.1",
